# AntiSpam-NLP-Pipeline

./: .gitignore  =3.4.5  =4.11.3  README.md  exception.py  pyproject.toml
.github/githubworkflows/: main.yaml  run_experimentation.yaml
.github/workflows/: execute_experiments.yaml  main.yaml  run_experimentation.yaml  sagemaker_train_base_model.yaml  train_baseline_model.yaml
data/bronze/: raw_dataset.csv
data/copper/: email_classification.csv
data/gold/: test.csv  train.csv  validation.csv  word2vec_avg.pkl
data/silver/: df_cleantext_v0.csv  df_lemmatized_v0.csv  df_preprocessed.csv
experimentation_pipeline/components/: data_ingestion.py  data_preprocessing.py  hyperparams.py  models.py  split_data.py  vectorizers.py
experimentation_pipeline/experiment_configs/: base_config.yaml  config_file.yaml  params_models.yaml  text_cleaning_rules.yaml
experimentation_pipeline/pipelines/: baseline_model.py  prueba.py  train.py
experimentation_pipeline/utils/: experiments_utils.py  textaug_techniques.py
experiments/: baseline_bow_MNB.ipynb  experiments_utils.py  textaug_nlpAug.ipynb
mlruns/0/: meta.yaml
notebooks/: NLP Spam Filter Project.ipynb  base_model.ipynb  eda.ipynb  modelling.ipynb  preprocessing.ipynb  preprocessing_v0.ipynb  special_chars_analysis.ipynb  split_data.ipynb  vectorization.ipynb
notebooks/experimentation/: BOW_MNB.ipynb  README.md  bal_bow_MNB.ipynb  bal_syn_bow_MNB.ipynb  base_model.ipynb  base_model_bow_MNB.ipynb  experiments_config.yaml  experiments_utils.py  modelling.ipynb  oversampling_BOW_MNB.ipynb  synonims_bow_MNB.ipynb  textAug_bow_MNB.ipynb  vectorization.ipynb
research/: EXPERIMENTS_GUIDELINE.md  preprocessing_v0.ipynb  research_utils.py  split_data.ipynb
research/01_feature_pipeline/: eda_combined_data.ipynb
research/01_initial_eda_preprocessing/: eda.ipynb  preprocessing.ipynb  special_chars_analysis.ipynb
research/02_baseline_model/: baseline_bow_MNB.ipynb  baseline_model.ipynb  puto.ipynb  testing.ipynb
research/02_initial_eda_preprocessing/: eda.ipynb  eda_train.ipynb  preprocessing.ipynb  split_data.ipynb
research/03_baseline_model/: baseline_model.ipynb
research/03_text_augmentation/: nlpaug_SynonymAug_bow_MNB.ipynb  nlpaug_exploration.ipynb  nlpaug_params.yaml  textaug_AntonymAug_bow_MNB.ipynb  textaug_ContextualWordEmbsAug_bow_MNB.ipynb  textaug_KeyboardAug_bow_MNB.ipynb  textaug_SpellingAug_bow_MNB.ipynb  textaug_bow_MNB.ipynb
research/utils/: __init__.py  experiments_utils.py  textaug_techniques.py
spam/: pyproject.toml
spam-classifier/: exception.py  logger.py
spam-classifier/components/: data_ingestion.py  preprocessing.py  split_data.py
spam-classifier/dags/: experiments_config.yaml  experiments_pipeline.py
spam-classifier/pipelines/: experiments_config.yaml  experiments_pipeline.py
spam-classifier/utils/: experiments_utils.py  mlflow_utils.py  (+1 more)
(+111 files in other folders)
