[tool.poetry]
name = "spam-detector"
version = "0.1.0"
description = "e-mail spam detector"
authors = ["Maldu <anamld62@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
kagglehub = "^0.3.4"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
emoji = "^2.14.0"
mlflow = "^2.18.0"
wordcloud = "^1.9.4"
tqdm = "^4.67.1"
numpy = ">=1.18.5,<2.0"  
gensim = "4.3.3"




[tool.poetry.dev-dependencies]
pytest = "^7.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
