[tool.poetry]
name = "spam-detector"
version = "0.1.0"
description = "e-mail spam detector"
authors = ["Maldu <anamld62@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
kagglehub = "^0.3.4"
nltk = "^3.9.1"
xgboost = "^2.1.3"
dvc = "^3.57.0"
flask = "^3.1.0"
imblearn = "^0.0"
scikit-learn = "^1.5.2"
numpy = ">=1.18.5,<2.0"  
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
textattack = "^0.3.10"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
emoji = "^2.14.0"
mlflow = "^2.18.0"
wordcloud = "^1.9.4"
tqdm = "^4.67.1"

gensim = "4.3.3"
psutil = "^6.1.0"
pynvml = "^11.5.3"
papermill = "^2.6.0"
nbconvert = "^7.16.4"
webencodings = "^0.5.1"
notebook = "^7.3.1"
ipynbname = "^2024.1.0.0"




[tool.poetry.dev-dependencies]
pytest = "^7.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
